src/pages/login/login.scss
page-login {
	display: flex;
}

.login__scroll {
	overflow-x: hidden;
	overflow-y: scroll;
	height: 100%;
	width: 100%;

	color: #000;
	background-color: #fff;
}

.login__wrap {
	display: flex;
	flex-direction: column;

	height: 100%;
	width: 100%;
}

.login__logo-wrap {
	text-align: center;

	margin: auto;
	margin-bottom: 0;
}

.login__logo {
	width: 80%;
}

.login__paragraph {
	text-align: center;
}

.login__paragraph--primary {
	color: map-get($colors, primary);
}

.login__paragraph--detail {
	margin-top: 0;
	color: #c6cbcc;
}

.login__welcome-text {
	//margin-top: 1em;

	font-size: 1.67em;
	text-align: center;
}

.login__form {
	align-self: flex-end;
	margin: auto auto 0;

	width: 100%;

	padding: 0 2em;

	.login__paragraph {
		min-height: 2.4em;
		line-height: 1.2em;
		font-size: 14px;
	}
}

.login__input-wrap {
	margin-bottom: 1em;
}

.login__input {
	display: block;
	width: 100%;

	padding: 0;

	background-color: #e9eaeb;
	color: #b6bbbd;

	border: none !important;
	border-radius: 5px;

	font-size: 14px;

	input {
		padding: 1em;
		margin: 0;
	}

	&[disabled="true"], &[ng-reflect-disabled="true"] {
		background-color: #f5f6f6;
	}
}

.login__icon-label {
	position: absolute;
	top: 50%;
	right: 0;

	width: 1em !important;
	height: 1em;

	min-width: 0 !important;
	margin-top: -0.5em;

	font-size: 1.3em;
}

